--- a/src/Emmar/Cards/Cardone.css
+++ b/src/Emmar/Cards/Cardone.css
@@ -1,15 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Lato:ital,wght@0,400;1,700&family=Montserrat:wght@300&family=Nunito:wght@200&display=swap');
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: 'Nunito', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 }
 .img-section {
 	position: relative;
 }
 .img-section img {
-	width: auto;
-	height: auto;
+	width: 750px;
+	height: 450px;
+	border-radius: 5px;
 }
 .leftbutton {
 	top: 50%;
@@ -17,7 +19,10 @@
 	border-style: none;
 	font-size: 20px;
 	background-color: transparent;
-	color: black;
+	color: white;
+}
+.main-div {
+	margin-top: 2rem;
 }
 .rightbutton-one {
 	top: 50%;
@@ -26,20 +31,21 @@
 	border-style: none;
 	font-size: 20px;
 	background-color: transparent;
-	color: black;
+	color: white;
 }
 .gallery-section {
 	display: flex;
 	gap: 1rem;
-	padding: 2rem;
+	padding: 1rem;
+	background-color: bisque;
+	border-radius: 10px;
 }
 .text-section {
 	display: grid;
-	/* max-width: 470px; */
 }
 .col-1-first {
 	display: flex;
-	gap: 10rem;
+	justify-content: space-between;
 }
 .direction-div {
 	padding: 6px 10px;
@@ -71,6 +77,11 @@
 }
 .images-1 img {
 	border-radius: 5px;
+	width: 100%;
+	transition: transform 0.2s;
+}
+.images-1 img:hover {
+	transform: scale(1.5);
 }
 .cardsection {
 	padding: 0rem;
@@ -78,20 +89,31 @@
 }
 .p-tag-title {
 	font-size: 10px;
-	color: gray;
+	color: black;
+	font-weight: 1000;
+}
+.title-card {
+	text-align: start;
 }
 @media screen and (max-width: 600px) {
 	.col-1-first {
-		gap: 0.2rem;
+		width: 100%;
+		justify-content: space-between;
+		gap: 0rem;
+	}
+	.text-section {
+		gap: 1rem;
 	}
 	.subimages-div {
-		display: grid;
+		display: flex;
+		width: 100%;
 	}
 	.gallery-section {
 		flex-wrap: wrap;
 	}
-	.img-section {
-		overflow: hidden;
+	.img-section img {
+		width: 100%;
+		height: 100%;
 	}
 	.subimages-div {
 		text-align: center;
@@ -103,15 +125,25 @@
 	.cardsection {
 		margin: 0rem 0rem;
 	}
-	.title-card-two h1 {
-		font-size: 20px;
+	.title-card h1 {
+		font-size: 25px;
+	}
+	.img-title {
+		font-size: 10px;
+	}
+	.p-tag-title {
+		font-size: 9px;
 	}
 }
 @media screen and (max-width: 1024px) {
-	.main-div {
-		/* overflow: hidden; */
+	.img-section img {
+		width: 100%;
 	}
 	.gallery-section {
-		
+		width: 100%;
+		display: grid;
+	}
+	.text-section {
+		gap: 1rem;
 	}
 }
