--- a/src/Emmar/Navbar/Navbar.css
+++ b/src/Emmar/Navbar/Navbar.css
@@ -1,127 +1,88 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Lato:ital,wght@0,400;1,700&family=Montserrat:wght@300&family=Nunito:wght@200&display=swap');
+
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-family: 'Montserrat', sans-serif;
 }
 .navbar {
-	background-color: white;
-	height: 55px;
+	height: 60px;
 	display: flex;
-	justify-content: center;
+	justify-content: space-around;
 	align-items: center;
-	font-size: 1.2rem;
-	position: sticky;
-	top: 0;
-	z-index: 20;
 }
-
-.nav-container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 100%;
-	height: 80px;
-	max-width: 1500px;
-}
-
 .nav-logo {
-	color: #f5b921;
-	align-items: center;
-	margin-left: 20px;
-	cursor: pointer;
-	text-decoration: none;
-	font-size: 2rem;
-	flex-grow: 1;
+	font-weight: 700;
+	font-size: 25px;
+	margin: 15px;
+	color: rgb(17, 11, 11);
 }
-
-.nav-menu {
-	display: flex;
-	list-style: none;
-	text-align: center;
-	margin-right: 2rem;
-}
-
-.nav-container a {
+.navbar-items a {
 	color: black;
+	font-size: 16px;
 	text-decoration: none;
-	padding: 0.5rem 1rem;
-	height: 100%;
-	border-bottom: 3px solid transparent;
-}
-.fa-code {
-	margin-left: 1rem;
+	padding: 0.4rem;
+	margin: 15px;
+	position: relative;
+	opacity: 0.9;
 }
 
-.nav-item {
-	line-height: 40px;
-	margin-right: 1rem;
-}
-
-.nav-item:after {
-	content: '';
-	display: block;
-	height: 3px;
-	width: 0;
-	background: transparent;
-	transition: width 0.7s ease, background-color 0.5s ease;
-}
-
-.nav-item:hover:after {
+.navbar-items > a:hover ::before {
 	width: 100%;
-	background: #ffdd40;
 }
-
-.nav-item .active {
-	color: #ffdd40;
-	border: 1px solid #ffdd40;
-}
-
-.nav-icon {
+.nav-taggle {
 	display: none;
 }
-.button-getin {
-	padding: 0.5rem 1rem;
-	background-color: black;
-	color: white;
+.nav-button {
+	display: none;
 }
-@media screen and (max-width: 750px) {
-	.nav-menu {
+.callbutton {
+	border: 1px solid;
+	border-radius: 50px;
+}
+.whatsbutton {
+	border: 1px solid;
+	border-radius: 50px;
+}
+.getbutton {
+	padding: 0.5rem 1rem;
+	color: azure;
+	background-color: black;
+	border-radius: 50px;
+}
+@media (max-width: 700px) {
+	.navbar-items {
+		position: absolute;
+		top: 60px;
 		display: flex;
 		flex-direction: column;
+		background: white;
+		left: 0rem;
 		width: 100%;
-		border-top: 1px solid #fff;
-		position: absolute;
-		top: 30px;
-		left: -110%;
-		opacity: 1;
-		transition: all 0.5s ease;
-	}
-
-	.nav-menu.active {
-		background: #d3dedf;
-		left: 0px;
-		opacity: 1;
-		transition: all 0.5s ease;
+		height: 30%;
 		z-index: 1;
-	}
-	.nav-item .active {
-		color: #ffdd40;
-		border: none;
-	}
-	.nav-container a {
-		padding: 1.5rem;
-		width: 100%;
-		display: table;
+		text-align: center;
 	}
 
-	.nav-icon {
-		display: block;
-		position: absolute;
-		top: 0;
-		right: 0;
-		transform: translate(-100%, 60%);
-		font-size: 1.8rem;
+	.nav-taggle {
+		display: flex;
+		width: 50px;
+		height: 50px;
+		align-items: center;
+		justify-content: center;
 		cursor: pointer;
-		color: #ffdd40;
+	}
+	.navbar-items.active {
+		display: none;
+	}
+	.nav-button {
+		display: block;
+	}
+	.nav-logo {
+		font-size: 19px;
+	}
+	.navbar-items a {
+		padding: 0.3rem;
 	}
 }
