--- a/src/Emmar/textslide/Textslide.css
+++ b/src/Emmar/textslide/Textslide.css
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Lato:ital,wght@0,400;1,700&family=Montserrat:wght@300&family=Nunito:wght@200&display=swap');
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-family: 'Montserrat', sans-serif;
 }
 .body {
-	font-family: 'Nunito', sans-serif;
 	text-align: center;
 }
 .a1-div p {
