--- a/src/Myroomie/Componets/Navbar/Navbar.css
+++ b/src/Myroomie/Componets/Navbar/Navbar.css
@@ -7,56 +7,55 @@
 .navbar {
 	height: 60px;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
 }
-.navbar > .nav-logo {
+.nav-logo {
 	font-weight: 700;
 	font-size: 25px;
 	margin: 15px;
-	color: black;
+	color: rgb(17, 11, 11);
 }
-.navbar > .navbar-items > a {
+.navbar-items a {
 	color: black;
 	font-size: 16px;
 	text-decoration: none;
+	padding: 1rem;
 	margin: 15px;
 	position: relative;
 	opacity: 0.9;
 }
-.navbar > .navbar-items > a:hover {
-	opacity: 1;
-}
-.navbar > .navbar-items > a::before {
-	opacity: 0;
-	position: absolute;
-	left: 0;
-	bottom: 0;
-	width: 0%;
-	height: 2px;
-	background: #afafaf;
-	transition: all 0.45s;
-}
-.navbar > .navbar-items > a:hover ::before {
+
+.navbar-items > a:hover ::before {
 	width: 100%;
 }
-.navbar > .nav-taggle {
+.nav-taggle {
 	display: none;
 }
-
+.nav-button {
+	display: none;
+}
+.getbutton {
+	padding: 0.5rem 1rem;
+	color: azure;
+	background-color: black;
+	border-radius: 0.2rem;
+}
 @media (max-width: 700px) {
-	.navbar > .navbar-items {
+	.navbar-items {
 		position: absolute;
 		top: 60px;
 		display: flex;
 		flex-direction: column;
-		background: #e7dfdf;
-		left: 0;
-		width: 100%;
-		height: 100%;
+		background: white;
+		left: 15rem;
+		width: 30%;
+		height: 45%;
+		z-index: 1;
+		text-align: center;
 	}
 
-	.navbar > .nav-taggle {
+	.nav-taggle {
 		display: flex;
 		width: 50px;
 		height: 50px;
@@ -64,29 +63,13 @@
 		justify-content: center;
 		cursor: pointer;
 	}
-	.nav-taggle > .bar {
-		position: relative;
-		width: 32px;
-		height: 2px;
-		background: #afafaf;
-		transition: all 0.45s ease-in-out;
+	.navbar-items.active {
+		display: none;
 	}
-	.nav-taggle > .bar::before,
-	.nav-taggle > .bar::after {
-		content: '';
-		position: absolute;
-		height: 2px;
-		background: #f7f1f1;
-		border-radius: 2px;
-		transition: all 0.45s ease-in-out;
+	.nav-button {
+		display: block;
 	}
-	.nav-taggle > .bar::before {
-		width: 25px;
-		transform: translateY(-8px);
-		right: 0;
-	}
-	.nav-taggle > .bar::after {
-		width: 32px;
-		transform: translateY(8px);
+	.nav-logo {
+		font-size: 19px;
 	}
 }
